# browser-codex

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  PLAN.md  README.md  package.json  playwright.config.ts  tsconfig.tools.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
crates/codex-browser-core/: Cargo.toml
crates/codex-browser-core/src/: approval.rs  client.rs  errors.rs  events.rs  history.rs  host.rs  lib.rs  models.rs  output_truncation.rs  path.rs  session.rs  trace.rs  wasm_case.rs
crates/codex-browser-core/src/tools/: apply_patch.rs  exec.rs  mod.rs  registry.rs  spec.rs
crates/codex-browser-core/tests/: core.rs
docs/: browser-runtime-architecture.md  codex-rs-core-wasm-feasibility.md  wasm-core-harness.md
harness/browser/: index.html
harness/cases/: early_stream_close_retry.json  early_stream_close_tool_retry.json  invalid_apply_patch.json  multiple_tool_calls.json  no_tool.json  reasoning_delta.json  unsupported_custom_tool.json
harness/oracle/: upstreamOracle.ts
scripts/: check-upstream-sync.ts  test-integration.sh  test-unit.sh  ui-add.ts
tests/browser/: index.html  webcontainer-host.html
tests/cases/: apply_patch_add_update_delete.json  apply_patch_end_of_file.json  apply_patch_move.json  apply_patch_multiple_chunks.json  early_stream_close_retry.json  early_stream_close_tool_retry.json  exec_denied.json  exec_invalid_utf8.json  exec_native_truncation.json  exec_success.json  exec_truncation.json  exec_tty_shell_payload.json  exec_unsupported_sandbox_permissions.json  invalid_exec_arguments.json  multiple_tool_calls.json  parallel_tool_calls_disabled.json  reasoning_delta.json  streamed_assistant_text_delta.json  tool_search_client.json  unsupported_function_tool.json  (+2 more)
tests/oracle/native-core-runner/: Cargo.toml
tests/oracle/native-core-runner/src/: main.rs
(+17 files in other folders)
