[workspace]
members = ["crates/codex-browser-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
